<resources>
    <string name="app_name">Free Paint</string>
    <string name="color">Color</string>
    <string name="pencil">Pencil</string>
    <string name="brush">Brush</string>
    <string name="bucket">Bucket</string>
    <string name="erase">Erase</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="tools">Tools</string>
    <string name="start_new">New</string>
    <string name="line">Line</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="oval">Oval</string>
    <string name="triangle">Triangle</string>
    <string name="paint">Paint</string>
    <string name="sml_string">Small</string>
    <string name="med_string">Medium</string>
    <string name="lrg_string">Large</string>
    <string name="about">About</string>
    <string name="logo">Logo</string>
    <string name="features"><u>Features</u></string>
    <string name="feat1">Save A Document</string>
    <string name="feat2">Open A Document</string>
    <string name="feat3">New Blank Sheet</string>
    <string name="feat4">Draw Shapes</string>

    <string name="featSave">Save </string>
    <string name="featOpen">Open </string>
    <string name="featNew">Blank Sheet</string>
    <string name="featShape">Shape</string>
</resources>
